fixed scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   position: absolute;
-  height: 90%;
+  height: 86vh;
   width: 90%;
   top: 57%;
   left: 50%;
